Chap4 NPV model explained + parameters outlined

--- a/templates/chap3.tex
+++ b/templates/chap3.tex
@@ -288,12 +288,12 @@ KDE values calculated at each fishnet point location were loaded into ArcGIS, an
 
 \subsubsection{State Map Fault Density}
 
-Digitized state geologic map fault outlines are available for download from the USGS Energy and Environment in the Rocky Mountain Area data portal \citep{usgs_eerma_2021}, including New Mexico faults \citep{stoeser_new_2005}. This data layer was loaded into ArcGIS and, like the Quaternary fault data set, converted to a density layer using the \textit{Kernel Density} operation (Figure \ref{fig:state_faults}). Selected parameters for this function include an output cell size of 0.0025 degrees and an auto-determined search radius of 0.252.
+Digitized state geologic map fault outlines are available for download from the USGS Energy and Environment in the Rocky Mountain Area data portal \citep{usgs_eerma_2021}, including New Mexico faults \citep{stoeser_usgs_2005}. This data layer was loaded into ArcGIS and, like the Quaternary fault data set, converted to a density layer using the \textit{Kernel Density} operation (Figure \ref{fig:state_faults}). Selected parameters for this function include an output cell size of 0.0025 degrees and an auto-determined search radius of 0.252.
 
 \begin{figure}[!htp]
 \centering
 \includegraphics[scale=.50]{templates/images/Figure-StateFaultDensity.pdf}
-\caption[State fault density data layer]{State fault density data layer. Units are in degrees/degrees$^2$. Dark gray lines trace the fault polyline data set obtained from USGS Open-File Report 2005-1351 \protect\citep{stoeser_new_2005}}
+\caption[State fault density data layer]{State fault density data layer. Units are in degrees/degrees$^2$. Dark gray lines trace the fault polyline data set obtained from USGS Open-File Report 2005-1351 \protect\citep{stoeser_usgs_2005}}
 \label{fig:state_faults}
 \end{figure}
 
@@ -321,12 +321,12 @@ Surface elevation gradient was calculated using the ArcGIS \textit{Slope} functi
 
 \subsubsection{Volcanic Dike Density}
 
-The USGS Energy and Environment in the Rocky Mountain Area data portal \citep{usgs_eerma_2021} also includes digitized volcanic dike outlines from the New Mexico state geologic map \citep{stoeser_new_2005-1}. This data set was imported into ArcGIS and, like the Quaternary fault data set, converted to a density layer using the \textit{Kernel Density} operation (Figure \ref{fig:feat_dikes}). Selected parameters for this function included an output cell size of 0.0025 degrees and an auto-determined search radius of 0.252.
+The USGS Energy and Environment in the Rocky Mountain Area data portal \citep{usgs_eerma_2021} also includes digitized volcanic dike outlines from the New Mexico state geologic map \citep{stoeser_usgs_2005}. This data set was imported into ArcGIS and, like the Quaternary fault data set, converted to a density layer using the \textit{Kernel Density} operation (Figure \ref{fig:feat_dikes}). Selected parameters for this function included an output cell size of 0.0025 degrees and an auto-determined search radius of 0.252.
 
 \begin{figure}[!htp]
 \centering
 \includegraphics[scale=.50]{templates/images/Figure-DikeDensity.pdf}
-\caption[Volcanic dike data layer]{Volcanic dike density data layer. Units are in degrees/degrees$^2$. Black lines trace the dike polyline data set obtained from USGS Open-File Report 2005-1351 \protect\citep{stoeser_new_2005-1}.}
+\caption[Volcanic dike data layer]{Volcanic dike density data layer. Units are in degrees/degrees$^2$. Black lines trace the dike polyline data set obtained from USGS Open-File Report 2005-1351 \protect\citep{stoeser_usgs_2005}}
 \label{fig:feat_dikes}
 \end{figure}
 
