--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,22 +1,125 @@
 
-@article{lowry_geovision_2017,
-	title = {{GeoVision} {Analysis} {Supporting} {Task} {Force} {Report}: {Reservoir} {Maintenance} and {Development}},
-	abstract = {This report documents the key findings from the Reservoir Maintenance and Development (RM\&D) Task of the U.S. Department of Energy’s (DOE), Geothermal Technologies Office (GTO) Geothermal Vision Study (GeoVision Study). The GeoVision Study had the objective of conducting analyses of future geothermal growth based on sets of current and future geothermal technology developments. The RM\&D Task is one of seven tasks within the GeoVision Study with the others being, Exploration and Confirmation, Potential to Penetration, Institutional Market Barriers, Environmental and Social Impacts, Thermal Applications, and Hybrid Systems. The full set of findings and the details of the GeoVision Study can be found in the final GeoVision Study report on the DOE-GTO website. As applied here, RM\&D refers to the activities associated with developing, exploiting, and maintaining a known geothermal resource. It assumes that the site has already been vetted and that the resource has been evaluated to be of sufficient quality to move towards full-scale development. It also assumes that the resource is to be developed for power generation, as opposed to low-temperature or direct use applications. This document presents the key factors influencing RM\&D from both a technological and operational standpoint and provides a baseline of its current state. It also looks forward to describe areas of research and development that must be pursued if the development geothermal energy is to reach its full potential.},
+@misc{pnm_public_2014,
+	title = {Public {Service} {Company} of {New} {Mexico}'s {Renewable} {Energy} {Portfolio} {Procurement} {Plan} {For} 2015},
+	shorttitle = {{NM} {PRC} {Case} {No}. 14-00\_\_-{UT}},
+	url = {https://www.pnm.com/documents/396023/428013/Renewable_Plan_2015/8e4a68b7-5177-4e38-99c2-d3edf7f598c6},
+	urldate = {2021-05-02},
+	author = {{PNM}},
+	month = jun,
+	year = {2014},
+}
+
+@techreport{stoeser_usgs_2005,
+	address = {Reston, VA},
+	type = {Open-{File} {Report}},
+	title = {{USGS} {Geologic} {Map} {Database}, {New} {Mexico}},
+	url = {http://pubs.usgs.gov/of/2005/1351/},
+	abstract = {This open-file report presents the results of the USGS Mineral Resources
+Program activity to compile a national-scale geologic map database to support
+national and regional level projects, including mineral resource and geo-
+environmental assessments. The only comprehensive sources of regional- and
+national-scale geologic maps are state geologic maps with scales ranging from
+1:100,000 to 1:1,000,000. Digital versions of these state maps form the core
+of what is presented here. Because no adequate geologic map exists for the
+state of Alaska, it is being compiled in regional blocks that also form part
+of this national database. It is expected that this series will completed by
+approximately the end of 2007. These maps and databases are being released
+in blocks of states or, in the case of Alaska, as compiled blocks of
+1:250,000-scale quadrangles as chapters in this series. For Alaska, formal
+maps as well as databases are being published here, whereas for the
+conterminous U.S. only state databases and preview graphics are presented,
+because published maps for most states already exist. For Alaska these
+regional compilations will form the base for compiling a new geologic map of
+the state. As documented in Chapter A, standards for the conterminous U.S.
+are somewhat different than those for Alaska and Hawaii.
+This database consists of five major Arc/Info GIS datasets for each state;
+- one: geologic map with formations,
+- two: faults (where present),
+- three: dikes (where present),
+- four: miscellaneous line features (where present),
+- five: miscellaneous point features (where present).},
+	number = {2005-1351},
+	urldate = {2021-06-16},
+	institution = {USGS},
+	author = {Stoeser, Douglas and Green, Gregory and Morath, Laurie and Heran, William and Wilson, Anna and Moore, David and Van Gosen, Bradley},
+	year = {2005},
+}
+
+@article{lukawski_cost_2014,
+	title = {Cost analysis of oil, gas, and geothermal well drilling},
+	volume = {118},
+	issn = {0920-4105},
+	url = {https://www.sciencedirect.com/science/article/pii/S0920410514000813},
+	doi = {10.1016/j.petrol.2014.03.012},
+	abstract = {This paper evaluates current and historical drilling and completion costs of oil and gas wells and compares them with geothermal wells costs. As a starting point, we developed a new cost index for US onshore oil and gas wells based primarily on the API Joint Association Survey 1976–2009 data. This index describes year-to-year variations in drilling costs and allows one to express historical drilling expenditures in current year dollars. To distinguish from other cost indices we have labeled it the Cornell Energy Institute (CEI) Index. This index has nine sub-indices for different well depth intervals and has been corrected for yearly changes in drilling activity. The CEI index shows 70\% higher increase in well cost between 2003 and 2008 compared to the commonly used Producer Price Index (PPI) for drilling oil and gas wells. Cost trends for various depths were found to be significantly different and explained in terms of variations of oil and gas prices, costs, and availability of major well components and services at particular locations. Multiple methods were evaluated to infer the cost-depth correlation for geothermal wells in current year dollars. In addition to analyzing reported costs of the most recently completed geothermal wells, we investigated the results of the predictive geothermal well cost model WellCost Lite. Moreover, a cost database of 146 historical geothermal wells has been assembled. The CEI index was initially used to normalize costs of these wells to current year dollars. A comparison of normalized costs of historical wells with recently drilled ones and WellCost Lite predictions shows that cost escalation rates of geothermal wells were considerably lower compared to hydrocarbon wells and that a cost index based on hydrocarbon wells is not applicable to geothermal well drilling. Besides evaluating the average well costs, this work examined economic improvements resulting from increased drilling experience. Learning curve effects related to drilling multiple similar wells within the same field were correlated.},
 	language = {en},
-	author = {Lowry, Thomas S and Finger, John T and Carrigan, Charles R and Foris, Adam and Kennedy, Mack B and Corbet, Thomas F and Doughty, Christine A and Pye, Stephen and Sonnenthal, Eric L},
-	year = {2017},
-	pages = {80},
+	urldate = {2021-04-07},
+	journal = {Journal of Petroleum Science and Engineering},
+	author = {Lukawski, Maciej Z. and Anderson, Brian J. and Augustine, Chad and Capuano, Louis E. and Beckers, Koenraad and Livesay, Bill and Tester, Jefferson W.},
+	month = jun,
+	year = {2014},
+	keywords = {average well, cost index, cost modeling, drilling cost, economic, geothermal, learning, well cost},
+	pages = {1--14},
+}
+
+@article{beckers_geophires_2019,
+	title = {{GEOPHIRES} v2.0: updated geothermal techno-economic simulation tool},
+	volume = {7},
+	issn = {2195-9706},
+	shorttitle = {{GEOPHIRES} v2.0},
+	url = {https://doi.org/10.1186/s40517-019-0119-6},
+	doi = {10.1186/s40517-019-0119-6},
+	abstract = {This paper presents a new version (v2.0) of the geothermal techno-economic simulation tool GEOPHIRES [GEOthermal energy for Production of Heat and electricity (“IR”) Economically Simulated]. GEOPHIRES combines reservoir, wellbore, and surface plant technical models with cost correlations and levelized cost models to estimate the capital and operation and maintenance costs, instantaneous and lifetime energy production, and overall levelized cost of energy of a geothermal plant. In addition to electricity generation, direct-use heat applications and combined heat and power or cogeneration can be modeled. Various upgrades have been implemented to develop GEOPHIRES v2.0, including: updating the built-in cost correlations, coupling to the external reservoir simulator TOUGH2, enhancing the built-in wellbore simulator, converting the programming language to Python, and making the code open-source. Users are encouraged to build upon the tool, e.g., by implementing their own correlations or coupling to other simulators. In this paper, we discuss the GEOPHIRES v2.0 objectives and history, and we present the software architecture as well as built-in models and correlations. We include two example simulations and quick-start guide on how to run a simulation.},
+	language = {en},
+	number = {1},
+	urldate = {2021-04-07},
+	journal = {Geothermal Energy},
+	author = {Beckers, Koenraad and McCabe, Kevin},
+	month = feb,
+	year = {2019},
+	keywords = {cost modeling, geothermal},
+	pages = {5},
+}
+
+@misc{prestidge_personal_2021,
+	title = {personal communication},
+	author = {Prestidge, Kelsey},
+	year = {2021},
+	note = {oilfield employee},
 }
 
 @misc{us_bls_ppi_2021,
-	title = {{PPI} industry data for {Electric} power generation-{Utilities}},
+	title = {{PPI} industry data for electric power generation-utilities},
 	url = {https://data.bls.gov/timeseries/PCU2211102211104},
 	language = {en},
 	urldate = {2021-07-09},
 	author = {{U.S. BLS}},
 	year = {2021},
-	note = {not seasonally adjusted
+	note = {not seasonally adjusted,
 Bureau of Labor Statistics Data},
+}
+
+@misc{us_bls_eci_2021,
+	title = {{ECI} total compensation for private industry workers in utilities},
+	url = {https://data.bls.gov/timeseries/CIS2014400000000I},
+	language = {en},
+	urldate = {2021-07-10},
+	author = {{U.S. BLS}},
+	year = {2021},
+	note = {total compensation
+United States Bureau of Labor Statistics Data},
+}
+
+@techreport{lowry_geovision_2017,
+	address = {Albuquerque, NM},
+	type = {{SAND2017}-9977},
+	title = {{GeoVision} {Analysis} {Supporting} {Task} {Force} {Report}: {Reservoir} {Maintenance} and {Development}},
+	abstract = {This report documents the key findings from the Reservoir Maintenance and Development (RM\&D) Task of the U.S. Department of Energy’s (DOE), Geothermal Technologies Office (GTO) Geothermal Vision Study (GeoVision Study). The GeoVision Study had the objective of conducting analyses of future geothermal growth based on sets of current and future geothermal technology developments. The RM\&D Task is one of seven tasks within the GeoVision Study with the others being, Exploration and Confirmation, Potential to Penetration, Institutional Market Barriers, Environmental and Social Impacts, Thermal Applications, and Hybrid Systems. The full set of findings and the details of the GeoVision Study can be found in the final GeoVision Study report on the DOE-GTO website. As applied here, RM\&D refers to the activities associated with developing, exploiting, and maintaining a known geothermal resource. It assumes that the site has already been vetted and that the resource has been evaluated to be of sufficient quality to move towards full-scale development. It also assumes that the resource is to be developed for power generation, as opposed to low-temperature or direct use applications. This document presents the key factors influencing RM\&D from both a technological and operational standpoint and provides a baseline of its current state. It also looks forward to describe areas of research and development that must be pursued if the development geothermal energy is to reach its full potential.},
+	language = {en},
+	institution = {Sandia National Lab},
+	author = {Lowry, Thomas S and Finger, John T and Carrigan, Charles R and Foris, Adam and Kennedy, Mack B and Corbet, Thomas F and Doughty, Christine A and Pye, Stephen and Sonnenthal, Eric L},
+	year = {2017},
+	pages = {80},
 }
 
 @misc{eere_getem_2012,
@@ -973,42 +1076,6 @@ This project was supported by an American Recovery and Reinvestment Act (ARRA) g
 	year = {2021},
 }
 
-@techreport{stoeser_new_2005,
-	address = {Reston, VA},
-	type = {Open-{File} {Report}},
-	title = {New {Mexico} {Dikes}, from the {USGS} {Geologic} {Map} {Database}},
-	url = {http://pubs.usgs.gov/of/2005/1351/},
-	abstract = {This open-file report presents the results of the USGS Mineral Resources
-Program activity to compile a national-scale geologic map database to support
-national and regional level projects, including mineral resource and geo-
-environmental assessments. The only comprehensive sources of regional- and
-national-scale geologic maps are state geologic maps with scales ranging from
-1:100,000 to 1:1,000,000. Digital versions of these state maps form the core
-of what is presented here. Because no adequate geologic map exists for the
-state of Alaska, it is being compiled in regional blocks that also form part
-of this national database. It is expected that this series will completed by
-approximately the end of 2007. These maps and databases are being released
-in blocks of states or, in the case of Alaska, as compiled blocks of
-1:250,000-scale quadrangles as chapters in this series. For Alaska, formal
-maps as well as databases are being published here, whereas for the
-conterminous U.S. only state databases and preview graphics are presented,
-because published maps for most states already exist. For Alaska these
-regional compilations will form the base for compiling a new geologic map of
-the state. As documented in Chapter A, standards for the conterminous U.S.
-are somewhat different than those for Alaska and Hawaii.
-This database consists of five major Arc/Info GIS datasets for each state;
-- one: geologic map with formations,
-- two: faults (where present),
-- three: dikes (where present),
-- four: miscellaneous line features (where present),
-- five: miscellaneous point features (where present).},
-	number = {2005-1351},
-	urldate = {2021-06-16},
-	institution = {USGS},
-	author = {Stoeser, Douglas and Green, Gregory and Morath, Laurie and Heran, William and Wilson, Anna and Moore, David and Van Gosen, Bradley},
-	year = {2005},
-}
-
 @misc{usgs_tnm_2021,
 	title = {{TNM} {Download} v2},
 	url = {https://apps.nationalmap.gov/downloader/#/},
@@ -1027,42 +1094,6 @@ This database consists of five major Arc/Info GIS datasets for each state;
 	institution = {USGS},
 	author = {Bankey, Viki and Cuevas, Alejandro and Daniels, David and Finn, Carol A and Hernandez, Israel and Hill, Patricia and Kucks, Robert and Miles, Warner and Pilkington, Mark and Roberts, Carter},
 	year = {2002},
-}
-
-@techreport{stoeser_new_2005-1,
-	address = {Reston, VA},
-	type = {Open-{File} {Report}},
-	title = {New {Mexico} {Faults}, from the {USGS} {Geologic} {Map} {Database}},
-	url = {http://pubs.usgs.gov/of/2005/1351/},
-	abstract = {This open-file report presents the results of the USGS Mineral Resources
-Program activity to compile a national-scale geologic map database to support
-national and regional level projects, including mineral resource and geo-
-environmental assessments. The only comprehensive sources of regional- and
-national-scale geologic maps are state geologic maps with scales ranging from
-1:100,000 to 1:1,000,000. Digital versions of these state maps form the core
-of what is presented here. Because no adequate geologic map exists for the
-state of Alaska, it is being compiled in regional blocks that also form part
-of this national database. It is expected that this series will completed by
-approximately the end of 2007. These maps and databases are being released
-in blocks of states or, in the case of Alaska, as compiled blocks of
-1:250,000-scale quadrangles as chapters in this series. For Alaska, formal
-maps as well as databases are being published here, whereas for the
-conterminous U.S. only state databases and preview graphics are presented,
-because published maps for most states already exist. For Alaska these
-regional compilations will form the base for compiling a new geologic map of
-the state. As documented in Chapter A, standards for the conterminous U.S.
-are somewhat different than those for Alaska and Hawaii.
-This database consists of five major Arc/Info GIS datasets for each state;
-- one: geologic map with formations,
-- two: faults (where present),
-- three: dikes (where present),
-- four: miscellaneous line features (where present),
-- five: miscellaneous point features (where present).},
-	number = {2005-1351},
-	urldate = {2021-06-16},
-	institution = {USGS},
-	author = {Stoeser, Douglas and Green, Gregory and Morath, Laurie and Heran, William and Wilson, Anna and Moore, David and Van Gosen, Bradley},
-	year = {2005},
 }
 
 @misc{usgs_eerma_2021,
@@ -2698,17 +2729,6 @@ Publication Title: US EIA - Short-Term Energy Outlook},
 	year = {2017},
 }
 
-@misc{pnm_pnm_2014,
-	title = {{PNM}},
-	shorttitle = {{NM} {PRC} {Case} {No}. 14-00\_\_-{UT}},
-	url = {https://www.pnm.com/documents/396023/428013/Renewable_Plan_2015/8e4a68b7-5177-4e38-99c2-d3edf7f598c6},
-	abstract = {PUBLIC SERVICE COMPANY OF NEW MEXICO'S RENEWABLE ENERGY PORTFOLIO PROCUREMENT PLAN FOR 2015},
-	urldate = {2021-05-02},
-	collaborator = {{PNM}},
-	month = jun,
-	year = {2014},
-}
-
 @misc{dsire_dsire_2021,
 	title = {{DSIRE}},
 	url = {https://programs.dsireusa.org/system/program/detail/720},
@@ -3097,42 +3117,6 @@ Section: Reports},
 	journal = {JPT},
 	month = jan,
 	year = {2021},
-}
-
-@article{lukawski_cost_2014,
-	title = {Cost analysis of oil, gas, and geothermal well drilling},
-	volume = {118},
-	issn = {0920-4105},
-	url = {https://www.sciencedirect.com/science/article/pii/S0920410514000813},
-	doi = {10.1016/j.petrol.2014.03.012},
-	abstract = {This paper evaluates current and historical drilling and completion costs of oil and gas wells and compares them with geothermal wells costs. As a starting point, we developed a new cost index for US onshore oil and gas wells based primarily on the API Joint Association Survey 1976–2009 data. This index describes year-to-year variations in drilling costs and allows one to express historical drilling expenditures in current year dollars. To distinguish from other cost indices we have labeled it the Cornell Energy Institute (CEI) Index. This index has nine sub-indices for different well depth intervals and has been corrected for yearly changes in drilling activity. The CEI index shows 70\% higher increase in well cost between 2003 and 2008 compared to the commonly used Producer Price Index (PPI) for drilling oil and gas wells. Cost trends for various depths were found to be significantly different and explained in terms of variations of oil and gas prices, costs, and availability of major well components and services at particular locations. Multiple methods were evaluated to infer the cost-depth correlation for geothermal wells in current year dollars. In addition to analyzing reported costs of the most recently completed geothermal wells, we investigated the results of the predictive geothermal well cost model WellCost Lite. Moreover, a cost database of 146 historical geothermal wells has been assembled. The CEI index was initially used to normalize costs of these wells to current year dollars. A comparison of normalized costs of historical wells with recently drilled ones and WellCost Lite predictions shows that cost escalation rates of geothermal wells were considerably lower compared to hydrocarbon wells and that a cost index based on hydrocarbon wells is not applicable to geothermal well drilling. Besides evaluating the average well costs, this work examined economic improvements resulting from increased drilling experience. Learning curve effects related to drilling multiple similar wells within the same field were correlated.},
-	language = {en},
-	urldate = {2021-04-07},
-	journal = {Journal of Petroleum Science and Engineering},
-	author = {Lukawski, Maciej Z. and Anderson, Brian J. and Augustine, Chad and Capuano, Louis E. and Beckers, Koenraad F. and Livesay, Bill and Tester, Jefferson W.},
-	month = jun,
-	year = {2014},
-	keywords = {average well, cost index, cost modeling, drilling cost, economic, geothermal, learning, well cost},
-	pages = {1--14},
-}
-
-@article{beckers_geophires_2019,
-	title = {{GEOPHIRES} v2.0: updated geothermal techno-economic simulation tool},
-	volume = {7},
-	issn = {2195-9706},
-	shorttitle = {{GEOPHIRES} v2.0},
-	url = {https://doi.org/10.1186/s40517-019-0119-6},
-	doi = {10.1186/s40517-019-0119-6},
-	abstract = {This paper presents a new version (v2.0) of the geothermal techno-economic simulation tool GEOPHIRES [GEOthermal energy for Production of Heat and electricity (“IR”) Economically Simulated]. GEOPHIRES combines reservoir, wellbore, and surface plant technical models with cost correlations and levelized cost models to estimate the capital and operation and maintenance costs, instantaneous and lifetime energy production, and overall levelized cost of energy of a geothermal plant. In addition to electricity generation, direct-use heat applications and combined heat and power or cogeneration can be modeled. Various upgrades have been implemented to develop GEOPHIRES v2.0, including: updating the built-in cost correlations, coupling to the external reservoir simulator TOUGH2, enhancing the built-in wellbore simulator, converting the programming language to Python, and making the code open-source. Users are encouraged to build upon the tool, e.g., by implementing their own correlations or coupling to other simulators. In this paper, we discuss the GEOPHIRES v2.0 objectives and history, and we present the software architecture as well as built-in models and correlations. We include two example simulations and quick-start guide on how to run a simulation.},
-	language = {en},
-	number = {1},
-	urldate = {2021-04-07},
-	journal = {Geothermal Energy},
-	author = {Beckers, Koenraad F. and McCabe, Kevin},
-	month = feb,
-	year = {2019},
-	keywords = {cost modeling, geothermal},
-	pages = {5},
 }
 
 @misc{noauthor_hdr_nodate,
