--- a/templates/chap4.tex
+++ b/templates/chap4.tex
@@ -25,7 +25,7 @@ Public records regarding power generation at Lightning Dock provide some guidanc
 
 \subsection{New Mexico Electricity Demand}
 
-Pursuing the expansion of a power plant requires sufficient demand to ensure total revenue offsets project expenses. Fortunately, New Mexico regulations support the further development of geothermal power production in the state. Specifically, the Energy Transition Act signed in 2019 updated the New Mexico \acrlong{rps} (\acrshort{rps}) to go zero-carbon by 2050, with milestone targets along the way \citep{lillian_new_2019}. The RPS dates back to the Renewable Energy Act passed in 2004 and comes with several carve-outs, including a 30\% requirement for wind energy, 20\% for solar, and 5\% for other renewables like geothermal \citep{dsire_dsire_2021}. Public Service Company of New Mexico (PNM) is the state’s largest energy provider and services the Lordsburg area where Lightning Dock is located. PNM and Cyrq Energy currently share a 20-year \acrlong{ppa} (\acrshort{ppa}) for electricity generated at Lightning Dock. The PPA has gone through amendments over time to update both the wattage supplied to PNM and the pricing structure per MWh \citep[e.g.,][]{pnm_pnm_2014,stanfield_new_2017}. This indicates a PPA can be revisited if conditions change, which is an important aspect to consider when modeling project financials. 
+Pursuing the expansion of a power plant requires sufficient demand to ensure total revenue offsets project expenses. Fortunately, New Mexico regulations support the further development of geothermal power production in the state. Specifically, the Energy Transition Act signed in 2019 updated the New Mexico \acrlong{rps} (\acrshort{rps}) to go zero-carbon by 2050, with milestone targets along the way \citep{lillian_new_2019}. The RPS dates back to the Renewable Energy Act passed in 2004 and comes with several carve-outs, including a 30\% requirement for wind energy, 20\% for solar, and 5\% for other renewables like geothermal \citep{dsire_dsire_2021}. Public Service Company of New Mexico (PNM) is the state’s largest energy provider and services the Lordsburg area where Lightning Dock is located. PNM and Cyrq Energy currently share a 20-year \acrlong{ppa} (\acrshort{ppa}) for electricity generated at Lightning Dock. The PPA has gone through amendments over time to update both the wattage supplied to PNM and the pricing structure per MWh \citep[e.g.,][]{pnm_public_2014,stanfield_new_2017}. This indicates a PPA can be revisited if conditions change, which is an important aspect to consider when modeling project financials. 
 In addition to the RPS requirement for a diversified renewables portfolio, coal power plants across the state face mandated shut-downs as a consequence off the Energy Transition Act. Coal currently supplies a large fraction ($\approx$ 45\%) of electric power sector consumption in New Mexico (Figure \ref{fig:nm_energy_consumption}). The supply gap introduced as coal-based production ramps down to zero could more than compensate for a 5 MW addition of no-emissions energy to the New Mexico grid.
 
 \begin{figure}[!htp]
@@ -55,46 +55,47 @@ In the cost model outlined below, the economic analysis incorporates uncertainty
 
 Geothermal cost models typically report Levelized Cost of Electricity (LCOE) for simple comparison with other renewable energy sources. However, LCOE is standardized to represent the total lifetime costs incurred by a power plant normalized by the total lifetime power generation from start-up to plant decommissioning. LCOE is therefore not well-suited for communicating projected gains or losses under different designs or scenarios, which are the focus of this analysis. Instead, the model described here relies on \acrlong{npv} (\acrshort{npv}), a simple measure of project lifetime worth that accounts for the time value of money by applying a single interest rate, the discount rate, for both borrowing and deposits \citep[p.\ 195-215]{de_neufville_flexibility_2011}. Here, "present value" refers to a 2020 cost basis. For power generation over a 30-year lifespan -- the default for geothermal models like GETEM \citep{entingh_volume_2006} -- this basis takes the model out to 2050, a common benchmark year for future projections. 
 
-\subsubsection{NPV Model}
+\subsection{NPV Model}
 \label{ch4:cm_npv}
-Following the general outline for geothermal cost modeling from different sources \citep[e.g.,][]{augustine_hydrothermal_2009, beckers_introducing_2013,tester_future_2006}, this thesis considers revenue (R), operating and maintenance costs (OM), and capital expenditures (C) as the primary cash flow elements with a time dependency related to the constant discount rate (r). Capital expenses can be further decomposed into five sub-components associated with exploration, drilling \& completions, reservoir stimulation, fluid distribution, and power plant costs (Equation \ref{eq:cm_components}).
+Following the general outline for geothermal cost modeling from previous work \citep[e.g.,][]{augustine_hydrothermal_2009, beckers_introducing_2013,tester_future_2006}, this thesis considers revenue (R), operating \& maintenance costs (OPEX or OM), and capital expenditures (CAPEX or C) as the primary cash flows with a time dependency related to the constant discount rate (r). Capital expenses can be further decomposed into five sub-components associated with exploration, drilling \& completions, reservoir stimulation, fluid distribution, and power plant costs. Likewise, operating expenses subdivide into subsidiary costs for the power plant, wells, and water management (Equation \ref{eq:cm_components}).
 
 \begin{equation}
     \label{eq:cm_components}
     \begin{aligned}
-    NPV &= \sum_{t=1}^{T}\frac{R_t - OM_t - C_t}{(1+r)^t}\\
+    NPV &= \sum_{t=1}^{T}\frac{R_t - C_t - OM_t}{(1+r)^t}\\
     \text{where:}\\
-    C_t &= \left[C_{expl} + C_{dc} + C_{stim} + C_{dist} + C_{pp}\right]_t
-     \end{aligned}
+    C_t &= \left[C_{expl} + C_{dc} + C_{stim} + C_{dist} + C_{pp}\right]_t\\
+    OM_t &= \left[OM_{pp} + OM_{well} + OM_{water}\right]_t
+    \end{aligned}
 \end{equation}
 \\
 Revenue and expenses are treated on an annual basis, meaning shorter-term fluctuations like price and production seasonality are not explicitly modeled.
 
-\subsubsection{Exploration Costs} \label{ch4:cm_capex_expl}
-Costs for exploration activities are estimated by the same method defined for the 2012 GETEM model (Equation \ref{eq:cm_cexpl}) \citep{eere_getem_2012}. 
+\subsubsection{CAPEX: Exploration} \label{ch4:cm_capex_expl}
+Costs for exploration activities are estimated by the same method defined for the 2012 GETEM model (Equation \ref{eq:cm_capex_expl}) \citep{eere_getem_2012}. 
 
 \begin{equation}
-\label{eq:cm_cexpl}
-    C_{expl} = PI \cdot \left[ 1.12 \cdot (\$1\text{M} + 0.6\cdot C_{stdwell}) \right]
+\label{eq:cm_capex_expl}
+    C_{expl} = PPI \cdot \left[ 1.12 \cdot (\$1\text{M} + 0.6\cdot C_{dc}) \right]
 \end{equation}
 \\
-This relationship assumes slim hole (3-6" diameter) drilling for exploration at a 60\% discounted cost compared to standard-sized ($\geq$ 8.5" diameter) geothermal wells. The constant \$1M term accounts for pre-drilling costs, including field work, geophysical surveys of field structure, and interpretation of results. Technical and office support is covered by an additional 12\% applied to the estimate \citep{eere_getem_2012}. Total exploration costs are converted to a 2020 cost basis using the producer price index (PI) for electric power generation from the U.S. Bureau of Labor and Statistics \citep{us_bls_ppi_2021}.
+This relationship assumes slim hole (3-6" diameter) drilling for exploration at a 60\% discounted cost compared to standard-sized ($\geq$ 8.5" diameter) geothermal wells. The constant \$1M term accounts for pre-drilling costs, including field work, geophysical surveys of field structure, and interpretation of results. Technical and office support is covered by an additional 12\% applied to the estimate \citep{eere_getem_2012}. Total exploration costs are converted to a 2020 cost basis using the Producer Price Index (PPI) for electric power generation from the U.S. Bureau of Labor and Statistics \citep{us_bls_ppi_2021}.
 
-\subsubsection{Drilling \& Completions Costs} 
+\subsubsection{CAPEX: Drilling \& Completions} 
 \label{ch4:cm_capex_dc}
 
-Geothermal drilling and completions costs differ from traditional oil \& gas wells due to differences in hole diameter, thermal and geochemical conditions, and the strength and abrasiveness of the target formations \citep{lowry_geovision_2017}. Here, capital expenditures for drilling rely on the cost curve described by \citet{beckers_introducing_2013}.
+Geothermal drilling and completions costs differ from traditional oil \& gas wells due to differences in hole diameter, thermal and geochemical conditions, and the strength and abrasiveness of the target formations \citep{lowry_geovision_2017}. Here, drilling capital expenditures rely on a cost curve described by \citet[Equation 4,\ ][]{beckers_introducing_2013}.
 
 \begin{equation}
 \label{eq:cm_cdc}
-    C_{dc} = PI \cdot \left[ 1.65 \cdot 10^{-5} \cdot MD^{1.607} \right]
+    C_{dc} = PPI \cdot \left[ 1.65 \cdot 10^{-5} \cdot \text{MD}^{1.607} \right]
 \end{equation}
 \\
 where $C_{dc}$ is measured in \$M and MD refers to well measured depth in meters. Each power plant module will require an injector-producer pair, so this represents one-half of the drilling cost per module. Drilling costs are converted to a 2020 cost basis using the industry index for electric power generation \citep{us_bls_ppi_2021}. 
 
 Note that Equation \ref{eq:cm_cdc} was derived for well depths of 1600-9000 m. Assuming an average geothermal gradient of 100 K/km (Table \ref{tab:cm_resource_params}), the wells considered for this study could extend slightly shallower than this range, so this should be viewed as a minimum drilling \& completions estimate. The stochastic model considered later in this study includes variability in both geothermal gradient and drilling costs for a more comprehensive treatment of both variables.
 
-\subsubsection{Simulation Costs}
+\subsubsection{CAPEX: Simulation}
 \label{ch4:cm_stim}
 
 EGS at Lightning Dock requires stimulation of the Horquilla reservoir to create fluid pathways for thermal extraction. The stimulation cost estimate used in this study comes from the recent GeoVision analysis \citep{lowry_geovision_2017}:
@@ -104,26 +105,26 @@ EGS at Lightning Dock requires stimulation of the Horquilla reservoir to create 
     C_{stim} = \$1,250,000
 \end{equation}
 \\
-Since this represents a recent ballpark estimate, no cost basis conversion was applied in the model. In fact, the value in Equation \ref{eq:cm_stim} may be high since it includes the cost of water, which may not be a factor at Lightning Dock with the availability of hydrothermal brine from adjacent power plant operations. The model assumes stimulation is only performed for the injection well in each injector-producer pair, so this represents a \textit{per module} value.
+Since this represents a recent ballpark estimate, no cost basis conversion was applied in the model. In fact, the value in Equation \ref{eq:cm_capex_stim} may be high since it includes the cost of water, which may not be a factor at Lightning Dock with the availability of hydrothermal brine from adjacent power plant operations. The model assumes stimulation is only performed for the injection well in each injector-producer pair, so this represents a \textit{per module} value.
 
-\subsubsection{Distribution Costs}
+\subsubsection{CAPEX: Distribution}
 \label{ch4:cm_capex_dist}
 
 Fluid distribution costs include the entire surface piping system between the wells and power plant modules. This study uses the same estimate included in the GEOPHIRES model \citep{beckers_introducing_2013}.
 
 \begin{equation}
 \label{eq:cm_dist}
-    C_{dist} = \$50,000 \cdot q
+    C_{dist} = PPI \cdot \left[ \$50,000 \cdot q \right]
 \end{equation}
 \\
-where $q$ is the thermal power of the produced geofluid in MW. Under the scenario where modular power plant units are provided by a company like Climeon, fluid distribution may be included in the installation fees. Distribution capital expenditures would therefore be subsumed by power plant costs and $C_{dist}$ would reduce to zero. However, without confirmation of the fee break-down structure from Climeon, the model described here relies on Equation \ref{eq:cm_dist}. 
+where $q$ is the thermal power of the produced geofluid in MW and $PPI$ converts this 2012 value to a 2020 cost basis. Under the scenario where modular power plant units are provided by a company like Climeon, fluid distribution may be included in the installation fees. Distribution capital expenditures would therefore be subsumed by power plant costs and $C_{dist}$ would reduce to zero. However, without confirmation of the fee break-down structure from Climeon, the model described here relies on Equation \ref{eq:cm_dist}. 
 
-\subsubsection{Power Plant Costs}
+\subsubsection{CAPEX: Power Plant}
 \label{ch4:cm_capex_pp}
 
 Power plant costs for a modular installation remain a source of significant uncertainty for this cost model. The GEOPHIRES model implements a temperature-variable cost estimate first described by \citet{tester_future_2006} for a binary cycle power plant \citep{beckers_introducing_2013}. \citet{schochet_development_2001} predicted produced fluid temperatures of 280-320$^\circ$F (137-160 $^\circ$C) for the Lightning Dock EGS reservoir, which equates to \$1565-\$1694 per kWh by the GEOPHIRES estimate. Converted to a 2020 cost basis \citep{us_bls_ppi_2021}, this amounts to \$2230-\$2415 per kWh.
 
-If power plant capacity is modularized with pre-fabricated units like the Climeon PowerBlock concept, economies of scale should reduce the cost of construction and installation. Unanswered company inquiries left this rationale unconfirmed. Nevertheless, the author chose to assume a round-number estimate accounting for a modularity discount (Equation \ref{eq:cm_pp}). This could easily be replaced by more accurate numbers when those values become available.
+If power plant capacity is modularized with pre-fabricated units like the Climeon PowerBlock concept, economies of scale should reduce the cost of construction and installation. Unanswered company inquiries left this rationale unconfirmed. Nevertheless, the author chose to assume a round-number estimate accounting for a modularity discount (Equation \ref{eq:cm_pp}). This could be replaced by more accurate numbers when those values become available.
 
 \begin{equation}
 \label{eq:cm_pp}
@@ -132,55 +133,106 @@ If power plant capacity is modularized with pre-fabricated units like the Climeo
 \\
 The value in Equation \ref{eq:cm_pp} represents a 2020 estimate. Pump costs are assumed to be included in this expense.
 
-\subsubsection{Operations and Maintenance Expenses}
-\label{ch4:cm_opex}
+\subsubsection{OPEX: Power Plant}
+\label{ch4:cm_opex_pp}
 
-Operations and Maintenance expenditures can similarly be subdivided into subsidiary costs, including those related to the power plant, wells, and water management \citep{beckers_introducing_2013}.
+Power plant operating expenses follow the relationship used by the GEOPHIRES model based on a previous GETEM formulation \citep[Equation 9,\ ][]{beckers_introducing_2013}.
 
 \begin{equation}
-    \label{eq:cm_opex}
-    OM_t = \left[C_{OM,pp} + C_{OM,well} + C_{OM,water}\right]_t
+\label{eq:cm_om_pp}
+    OM_{pp} = 0.75 \cdot C_{labor} + 0.015 \cdot C_{pp}
 \end{equation}
-
-
-\subsubsection{Model Parameters}
-In order to estimate the values of these components, the following parameters were defined for a deterministic cost model. The values selected are reflective of the Animas, NM region, the Lightning Dock facility, and limits on components of the system to the best of the author's knowledge.
 \\
+Here, $C_{labor}$ refers to labor costs scaled to power plant production. The values in Table \ref{tab:labor_costs} follow \citet[Equation 10,\ ][]{beckers_introducing_2013}, updated to a 2020 cost basis using the Employment Cost Index (ECI) for total compensation for private industry utilities workers \citep{us_bls_eci_2021}.
+
+\begin{table}[!htp]
+\centering
+\begin{tabular}{|c|c|}
+\hline
+\textbf{Electricity Output (MW)} & \textbf{Labor Costs (2020 \$)} \\ \hline
+\textless 5 & 326,000 \\ \hline
+{[}5, 10) & 1,073,000 \\ \hline
+{[}10, 20) & 1,460,000 \\ \hline
+{[}20, 40) & 2,167,000 \\ \hline
+40+ & 2,581,000 \\ \hline
+\end{tabular}
+\caption[Power plant labor costs]{Power plant labor costs by plant capacity  \protect\citep{beckers_introducing_2013}}
+\label{tab:labor_costs}
+\end{table}
+
+\subsubsection{OPEX: Wells}
+\label{ch4:cm_opex_well}
+
+Operations and maintenance costs per geothermal well combines labor with a fraction of the drilling \& completions expenses \citep[Equation 12,\ ][]{beckers_introducing_2013}.
+
+\begin{equation}
+\label{eq:cm_om_well}
+    OM_{well} = 0.25 \cdot C_{labor} + 0.01 \cdot C_{dc}
+\end{equation}
 \\
-The following parameters relate to resource recovery:
+where $C_{labor}$ refers to labor costs in Table \ref{tab:labor_costs}. Equation \ref{eq:cm_om_well} covers expenses for a single well and must be doubled for injector-producer pairs associated with each power plant module.
+
+\subsubsection{OPEX: Water}
+\label{ch4:cm_opex_water}
+
+Water expenses refer to make-up water that replaces subsurface losses to the reservoir. The value applied here comes directly from the GETEM model \citep{eere_getem_2012}.
+
+\begin{equation}
+\label{eq:cm_om_water}
+    OM_{water} = PI \cdot \left[\$300 \cdot V_{loss}\right]
+\end{equation}
+where $V_{loss}$ is water loss in units of acre-feet and $PI$ converts this estimate to a 2020 cost basis. This operating cost could be alleviated by directly using excess water from the Lightning Dock hydrothermal operations. The cost model includes it for a more conservative cost estimate, but there is an argument to remove this cost entirely.
+
+\subsection{Model Parameters}
+In order to estimate the values for the NPV model components, several parameters related to resource recovery, field and plant operations, and key economic factors were pre-defined. The chosen parameters are representative of the Lightning Dock area and limits on components of the system to the best of the author's knowledge. Resource recovery parameters are listed in Table \ref{tab:cm_resource_params}. Field and plant operations parameters appear in Table \ref{tab:cm_ppops_params}. Economic factors influencing model performance are covered in Table \ref{tab:cm_econ_params}.
+
 \begin{table}[!htp]
 \centering
 \resizebox{\textwidth}{!}{
 \begin{tabular}{|l|c|l|}
 \hline
-\multicolumn{1}{|c|}{\textbf{Parameter}} & \textbf{Value} & \multicolumn{1}{c|}{\textbf{Reference/Notes}} \\ \hline
+\multicolumn{1}{|c|}{\textbf{Parameter}} & \textbf{Value} & \multicolumn{1}{c|}{\textbf{Source}} \\ \hline
 Ambient surface temperature & 15.8 $^\circ$C & \citep{dahal_evaluation_2012} \\ \hline
 Average geothermal gradient & 100 K/km & \citep{crowell_history_2014} \\ \hline
-Produced fluid temperature & 120 $^\circ$C & Limit on inlet temperature \citep{climeon_climeon_2021-1} \\ \hline
-Flow rate per unit & 35 kg/s & Limit on unit flow rate
-\citep{climeon_climeon_2021-1} \\ \hline
-Cooling in production well & 5 $^\circ$C & \citep[based on][]{beckers_introducing_2013, entingh_volume_2006} \\ \hline
+Initial average reservoir temperature & 149 $^\circ$C & \citep{schochet_development_2001} \\ \hline
+Cooling in production well & 5\% & \citep{lowry_geovision_2017} \\ \hline
+Flow rate per producer & 40 kg/s & \citep{entingh_volume_2006} \\ \hline
 Thermal drawdown rate & 0.5\% & \citep{entingh_volume_2006} \\ \hline
 Water loss rate & 2\% & \citep{freeman_system_2018} \\ \hline
 \end{tabular}}
 \caption[Cost model parameters for resource recovery]{Parameters related to resource recovery in the cost model}
 \label{tab:cm_resource_params}
 \end{table}
-\\
-The following parameters relate to capital expenditures, spanning exploration, drilling \& completions, power plant costs, distribution, and stimulation:
+
 \begin{table}[!htp]
 \centering
-\resizebox{\textwidth}{!}{
+\resizebox{.9\textwidth}{!}{
 \begin{tabular}{|l|c|l|}
 \hline
-\multicolumn{1}{|c|}{\textbf{Parameter}} & \textbf{Value} & \multicolumn{1}{c|}{\textbf{Reference/Notes}} \\ \hline
-Drilling costs & \$1,306,000 & \citep{dahal_evaluation_2012} \\ \hline
-Surface plant costs & 100 K/km & \citep{crowell_history_2014} \\ \hline
-Stimulation costs (S) & 120 $^\circ$C & Limit on inlet temperature \citep{climeon_climeon_2021-1} \\ \hline
-Fluid distribution costs (D) & 35 kg/s & Limit on unit flow rate
-\citep{climeon_climeon_2021-1} \\ \hline
-Redevelopment discount factor & 5 $^\circ$C & \citep[based on][]{beckers_introducing_2013, entingh_volume_2006} \\ \hline
+\multicolumn{1}{|c|}{\textbf{Parameter}} & \textbf{Value} & \multicolumn{1}{c|}{\textbf{Source}} \\ \hline
+Well redevelopment factor & 0.85 & \citep{prestidge_personal_2021} \\ \hline
+Plant capacity factor & 95\% & \citep[p.\ 309]{glassley_geothermal_2015} \\ \hline
+Plant degradation factor & 0.5\% & \citep{augustine_geovision_2019} \\ \hline
+2nd Law Efficiency & 30\% & \citep[Fig.\ 2]{beckers_geophires_2019} \\ \hline
 \end{tabular}}
-\caption[Cost model parameters for power plant CAPEX]{Parameters related power plant CAPEX in the cost model.}
-\label{tab:cm_capexpp_params}
+\caption[Cost model parameters for operations]{Parameters related to field and plant operations in the cost model}
+\label{tab:cm_ppops_params}
 \end{table}
+
+\begin{table}[!htp]
+\centering
+\resizebox{.8\textwidth}{!}{
+\begin{tabular}{|l|c|l|}
+\hline
+\multicolumn{1}{|c|}{\textbf{Parameter}} & \textbf{Value} & \multicolumn{1}{c|}{\textbf{Source}} \\ \hline
+Discount rate & 7\% & \citep{eere_getem_2012} \\ \hline
+Drilling cost learning rate & 6\% & \citep{lukawski_cost_2014} \\ \hline
+Contract rate above wholesale & 50\% & \citep{pnm_public_2014} \\ \hline
+\end{tabular}}
+\caption[Cost model adjustable]{Parameters related to economic factors in the cost model}
+\label{tab:cm_econ_params}
+\end{table}
+
+\subsection{Power Plant Performance} 
+\label{ch4:plant_perform}
+
